--- a/empresa.css
+++ b/empresa.css
@@ -57,7 +57,7 @@ a:hover{
 
 
 
-.containerArribals{
+.containerArrivals{
     display: flex;
     justify-content: center;
     align-items: center;
