--- a/empresa.css
+++ b/empresa.css
@@ -74,7 +74,7 @@ a:hover{
      font-size: 20px;  
 }
 
-.clickNewArribals{
+.clickNewArrivals{
     margin-top: 350px;
     margin-left: 80px;
     background-color: cadetblue;
