--- a/empresa.css
+++ b/empresa.css
@@ -41,7 +41,7 @@ a:hover{
     align-items: center;
     height: 100vh;
     background-image:url("images/portada.jpg");
-    background-size: 1200px,100vh;
+    background-size: 900px,100vh;
     background-repeat: no-repeat;
     background-position: center;
 }
@@ -62,10 +62,11 @@ a:hover{
     justify-content: center;
     align-items: center;
     margin-top: 50px;
-    width: 900px;
+    width: 700px;
     height: 100vh;
-    margin-left: 90px;
-    background-image: url("images/tienda.jpg")
+    margin-left: 300px;
+    background-image: url("images/tienda.jpg");
+    background-size: 900px,100vh;
 }
 
 .text1{
