--- a/empresa.css
+++ b/empresa.css
@@ -74,7 +74,6 @@ a:hover{
 }
 .clickNewArrivals{
     margin-top: 300px;
-    margin-left: 80px;
     background-color: cadetblue;
     border-radius: 10px;
     font-family: 'ZCOOL XiaoWei', serif;
@@ -129,8 +128,8 @@ a:hover{
     border-radius: 10px;
     font-family: 'ZCOOL XiaoWei', serif;
     font-size: 20px;
-    margin-top: 300px;
-    margin-left: 300px;
+    margin-top: 310px;
+    margin-left: 280px;
 }
 
 .enc{
@@ -208,3 +207,10 @@ a:hover{
     background-repeat: no-repeat;
     border-radius: 10px;
 }
+.containernewsletter{
+    width: 100%;
+    height: 100vh;
+  
+}
+
+
