--- a/empresa.css
+++ b/empresa.css
@@ -207,10 +207,88 @@ a:hover{
     background-repeat: no-repeat;
     border-radius: 10px;
 }
-.containernewsletter{
+.imgnewsletter{
+    display: flex;
+    justify-content: flex-start;
     width: 100%;
     height: 100vh;
+    background-color: rgb(0, 0, 0, 0.4);
+    margin-top: 30px;
+    border-radius: 10px;
+    
   
 }
 
+.imgnews{
+    width: 50%;
+    opacity: 0.7;
+    
+}
+.logonewsletter{
+    margin-top: 30px;
+   text-align: center;
+   margin-bottom: 0px;
+}
 
+.textnewsletter{
+margin-top: 100px;
+margin-right: 50px;
+margin-left: 50px;
+
+}
+
+.inputnewsletter{
+    width: 50%;
+    margin-left: 140px;
+    
+}
+input{
+    border-radius: 5px;
+}
+button{
+    border-radius: 5px;
+    background-color:  cadetblue;
+    font-family: 'ZCOOL XiaoWei', serif;
+    font-size: 15px;
+
+}
+.iconscontainer{
+    background-color: #ddd;
+    width: 77%;
+	padding: 80px;
+    text-align: center;
+    margin-top: 100px;
+    display: flex;
+    justify-content: center;
+    border-radius: 10px;
+    
+}
+
+.icon-button {
+	background-color: white;
+	cursor: pointer;
+	font-size:13px;
+	height: 40px;
+	line-height: 2.6rem;
+	margin: 0 15px;
+    width: 40px;
+    
+}
+
+
+
+@media all and (max-width: 680px) {
+    .icon-button {
+      border-radius: 10px;
+      font-size: 10px;
+      height: 20px;
+      line-height: 20px;
+      width: 20px;
+    }
+  
+    
+    .iconscontainer {
+  
+        padding: 10px;
+    }
+}
